CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 FATAL_ERROR )
PROJECT ( cpp_challenge )

SET ( dep_DIR ${cpp_challenge_SOURCE_DIR} )


FIND_PACKAGE ( dep )

IF ( DEP_FOUND )

    INCLUDE_DIRECTORIES ( ${OPENCV_INCLUDE_DIR} )
    LINK_DIRECTORIES ( ${OPENCV_LIBRARY} )

    INCLUDE_DIRECTORIES ( ${OPENCV_INCLUDE_DIR2} )
    LINK_DIRECTORIES ( ${OPENCV_LIBRARY2} )
    
    INCLUDE_DIRECTORIES ( ${OPENCV_INCLUDE_DIR3} )
    LINK_DIRECTORIES ( ${OPENCV_LIBRARY3} )
    
    INCLUDE_DIRECTORIES ( ${ZEROMQ_INCLUDE_DIR} )
    LINK_DIRECTORIES ( ${ZEROMQ_LIBRARY} )

    INCLUDE ( _src.cmake )
    
    SET ( cpp_challenge_BIN "cpp_challenge" )

    ADD_EXECUTABLE ( ${cpp_challenge_BIN} ${cpp_challenge_SOURCE_FILES} )

    TARGET_LINK_LIBRARIES ( ${cpp_challenge_BIN}
        ${OPENCV_LIBRARY} ${OPENCV_LIBRARY2} ${OPENCV_LIBRARY3} ${ZEROMQ_LIBRARY}
    )

    INSTALL ( FILES
        "${CMAKE_CURRENT_BINARY_DIR}/${cpp_challenge_BIN}"
        DESTINATION "${CMAKE_INSTALL_PREFIX}"
        PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE
    )
    
ENDIF ( DEP_FOUND )
